The ASF licenses this file to You under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
////

== 0.x.x

* Support multiple and formatting-agnostic template files (for https://github.com/apache/logging-log4j-tools/issues/44[#44] by Volkan Yazıcı)

* The changelog release models passed to the index template file (`.index.adoc.ftl`) is enriched with `changelogEntryCount` fields (for https://github.com/apache/logging-log4j-tools/issues/37[#37] by Volkan Yazıcı)

== 0.2.0 (2023-01-31)

* Fixed Windows compatibility (for https://github.com/apache/logging-log4j-tools/issues/19[#19] by Piotr P. Karwasz, Volkan Yazıcı)

* Fixed unreleased directory order in `ChangelogExporter` (for https://github.com/apache/logging-log4j-tools/issues/17[#17] by Volkan Yazıcı)

* Removed `security` as a change type from `log4j-changelog` (for https://github.com/apache/logging-log4j-tools/issues/14[#14] by Ralph Goers, Volkan Yazıcı)

* Added XSD for `log4j-changelog` XML files (for https://github.com/apache/logging-log4j-tools/issues/13[#13] by Piotr P. Karwasz, Volkan Yazıcı)

* Added `log4j-changelog-maven-plugin` module and renamed `log4j.changelog.exporter.outputDirectory` property to `log4j.changelog.outputDirectory` (for https://github.com/apache/logging-log4j-tools/issues/20[#20] by Ralph Goers, Volkan Yazıcı)

== 0.1.0 (2023-01-10)

* Added `log4j-tools-bom` and `log4j-changelog` modules (for https://issues.apache.org/jira/browse/LOG4J2-3628[LOG4J2-3628] by Volkan Yazıcı)