@@ -45,11 +45,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c   # 3.3.0
 
-      - name: Setup JDK 11
+      - name: Set up Java
         uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98   # 3.7.0
         with:
           distribution: temurin
-          java-version: 11
+          java-version: 17
           java-package: jdk
           architecture: x64
           cache: maven
@@ -118,11 +118,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c   # 3.3.0
 
-      - name: Setup Java & GPG
+      - name: Set up Java & GPG
         uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98   # 3.7.0
         with:
           distribution: temurin
-          java-version: 11
+          java-version: 17
           java-package: jdk
           architecture: x64
           cache: maven
